--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd client && yarn add",
+    "heroku-prebuild": "cd client && yarn",
     "client": "cd client && yarn start",
     "build": "cd client && yarn run build && yarn run build-storybook",
     "storybook": "cd client && yarn run storybook",
