updated the package files

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "type": "git",
     "url": "git+https://github.com/meloneminze/famly.git"
   },
-  "author": "",
-  "license": "ISC",
+  "private": true,
+  "author": "Melanie Turek",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/meloneminze/famly/issues"
   },
@@ -43,6 +44,10 @@
     "*.{js,jsx}": "eslint --fix",
     "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   },
+  "cacheDirectories": [
+    "client/node_modules",
+    "node_modules"
+  ],
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
