--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "emotion-theming": "^10.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
