Install react router

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
     "express": "^4.17.1",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "react-router-dom": "^5.1.2"
   }
 }
