--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "famly",
   "version": "1.0.0",
   "scripts": {
-    "heroku-prebuild": "cd client && yarn start",
-    "client": "cd client && yarn start",
+    "heroku-prebuild": "cd client && yarn",
+    "client": "cd client && yarn run start",
     "build": "cd client && yarn run build && yarn run build-storybook",
     "storybook": "cd client && yarn run storybook",
     "dev": "concurrently --kill-others-on-fail \"yarn run server\" \"yarn run client\" \"yarn run storybook\"",
